--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -94,7 +94,7 @@
         </div>
         </div>
     </section>
-    <!-- Blog section -->
+    <!-- Latest news section -->
     <section>
     <div>
         <header>
