--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -96,7 +96,7 @@
         </div>
         </div>
     </section>
-    <!-- Blog section -->
+    <!-- Latest news section -->
     <section>
         <div>
         <header>
