--- a/0x00-html_advanced/21-index.html
+++ b/0x00-html_advanced/21-index.html
@@ -104,7 +104,7 @@
         </div>
         </div>
     </section>
-    <!-- Blog section -->
+    <!-- Latest news section -->
     <section>
         <div>
         <header>
