--- a/0x00-html_advanced/16-index.html
+++ b/0x00-html_advanced/16-index.html
@@ -88,7 +88,7 @@
     <section>
         <div>
             <header>
-            <h2>Latest News</h2>
+            <h2>Latest news</h2>
             </header>
             <div>
             <article>
