--- a/0x04-flexbox/6-index.html
+++ b/0x04-flexbox/6-index.html
@@ -210,7 +210,7 @@
         </div>
       </section>
       <!– Latest news section –>
-      <section id="blog" class="section-latest-news">
+      <section id="latest_news" class="section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
