--- a/0x04-flexbox/11-article.html
+++ b/0x04-flexbox/11-article.html
@@ -16,7 +16,7 @@
         <div class="header-container">
           <div class="header-logo">
             <a href="/">
-              <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
+              <img src="images/logo-white.png" alt="Techium logo" width="160" height="40"/>
             </a>
           </div>
           <nav class="navbar-menu">
@@ -50,7 +50,11 @@
     <!– Main –>
     <main>
       <!– Hero section –>
-      <header class="section-hero hero-article" data-section-theme="dark" style="background-image: url(pic-article-02.jpg)">
+      <header
+        class="section-hero hero-article"
+        data-section-theme="dark"
+        style="background-image: url(pic-article-02.jpg)"
+      >
         <div class="container">
           <div class="section-body">
             <section class="section-inner">
