--- a/0x05-form/05-article.html
+++ b/0x05-form/05-article.html
@@ -178,9 +178,9 @@
                         <span class="form-field-container">
                             <input
                             type="text"
-                            name="your-first-name"
-                            id="your-first-name"
-                            placeholder="e.g. Mike"
+                            name="your-last-name"
+                            id="your-last-name"
+                            placeholder="e.g. Smith"
                             pattern="[A-Za-zÀ-ž\s]{3,}"
                             maxlength="40"
                             autocomplete="on"
