add help messages

--- a/0x05-form/05-article.html
+++ b/0x05-form/05-article.html
@@ -207,6 +207,7 @@
                             accesskey="e"
                             required="true"
                             />
+                            <i class="form-field-icon"></i>
                         </span>
                       </div>
                     </div>
