--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -22,10 +22,10 @@
               <p><a href="#">Pages</a></p>
               <p><a href="#">Contact</a></p>
             </div>
-          </div>
+          </nav>
         </div>
       </div>
-    </div>
+    </header>
     <main>
     <h1>Homepage</h1>
     <section class="section">
@@ -39,7 +39,7 @@
           <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
@@ -115,7 +115,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
       <div class="container">
         <div class="row">
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -174,6 +174,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
